Alignment corrections and added nav items

--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 		
 		header{
 		
-			background-color: rgba(158,185,207,0.52);	
+			background-color: rgba(158,185,207,0.52);
+
 		}
 		
 		h1{font-family: 'Patua One', cursive;}
@@ -16,9 +17,10 @@
 		}
 		
 		nav{
-			width:100%;
+			width:137%;
 			height:75px;
 			background-color:burlywood;	
+			word-spacing: 40px;
 		}
 		nav li{display:inline;
 		}
@@ -57,7 +59,7 @@
 		}
 		
 		footer{
-			width:100%;
+			width:99%;
 			height:80px;
 			background-color: rgba(222,115,91,0.89);
 			clear:both;
